Fixing mcom & quote in columned pages and anon username vertical alignment Add overflow: auto to .main_column class in CSS (below padding with 290px) Remove vertical-aligh: middle from anon_username class (end of CSS).

--- a/static/styles/afterdark/style.css
+++ b/static/styles/afterdark/style.css
@@ -1105,6 +1105,7 @@ div.body {
 
 .main_column {
     margin: 0px 290px 10px 0px;
+    overflow: auto;
    /* display:inline;
      width: 590px; */
 }
@@ -2651,7 +2652,6 @@ blockquote.bbcode.error code.error {
 
 .anon_name {
     font-weight: normal;
-    vertical-align: middle;
     text-align: center;
 }
 
